--- a/site/includes/components/home/5-recent-reviews.njk
+++ b/site/includes/components/home/5-recent-reviews.njk
@@ -1,7 +1,7 @@
 <section class=" md:flex flex-row text-light" id="reviews">
-	<img src="/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_1263.jpg" alt="Violinen-Sektion eines Orchesters" class="hidden md:relative md:self-center md:ml-x1p5 md:max-h-50vh md:w-2/5 md:my-x3 z-10 object-cover" [data-lazy]/>
+	<img src="/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_1263.jpg" alt="Violinen-Sektion eines Orchesters" class="hidden  md:block md:relative md:self-center md:ml-x1p5 md:max-h-50vh md:w-2/5 md:my-x3 z-10 object-cover" [data-lazy]/>
 
-	<div class="content p-x1p5 md:pl-x6 relative bg-primary md:-ml-x4">
+	<div class="content py-x3 px-x1p5 md:p-x1p5 md:pl-x6 relative bg-primary md:-ml-x4">
 		<h2 class=" font-medium text-x6 md:text-x2 flex-1 leading-tight md:mr-x0p5 ">
 			Alle zufrieden!
 		</h2>
@@ -25,9 +25,4 @@
 			Alle Bewertungen ansehen
 		</a>
 	</div>
-
-
-	<div {#<Imagesizes="(min-width:769px)37vw,10vw"srcset={`/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_200.jpg200w,/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_429.jpg429w,/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_609.jpg609w,/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_761.jpg761w,/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_895.jpg895w,/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_1017.jpg1017w,/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_1142.jpg1142w,/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_1253.jpg1253w,/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_1263.jpg1263w`}src="/images/violins_kzmb3h/violins_kzmb3h_c_scale,w_1263.jpg"alt="Violinen-SektioneinesOrchesters"/>#} class="shape md:bg-primary hidden md:block"></div>
-
-	<div class="z-20 image relative hidden md:inline-block"></div>
 </section>
