--- a/site/includes/components/home/6-no-deductable.njk
+++ b/site/includes/components/home/6-no-deductable.njk
@@ -3,7 +3,7 @@
 		class="hidden md:inline-block order-2">
 		<img src="/images/drums_ulbs6v/drums_ulbs6v_c_scale,w_2160.jpg" alt="Schlagzeuger mit Band im Hintergrund" class="w-full"/>
 	</div>
-	<div class="content p-x1p5 text-light md:relative md:z-10 md:flex flex-col md:w-1/2 bg-secondary">
+	<div class="content py-x3 px-x1p5 md:p-x1p5 text-light md:relative md:z-10 md:flex flex-col md:w-1/2 bg-secondary">
 		<h3 class="text-x6 md:text-x1p5 mb-x1 leading-tight md:mb-x0p5 font-medium ">
 			Keine&nbsp;
 			<br class="md:hidden"/>
