--- a/site/includes/components/home/1-hero.njk
+++ b/site/includes/components/home/1-hero.njk
@@ -1,34 +1,37 @@
-<section class="relative flex items-end overflow-hidden text-center min-h-70vh md:items-center  md:max-h-75vh">
-<div class="w-full z-10 relative content md:w-10/12 md:flex md:flex-col md:justify-center mx-auto md:my-x3 px-x1p5 mobile-bg">
-	<div class="reviews">
-		<a href="#reviews" class="w-auto inline-flex text-white mt-x2 mb-x1 md:my-x0p25 md:order-1 border boder-white border-x0p1 rounded-full hover:bg-black-x0p2 py-x0p5 px-x0p75 md:py-x0p25 md:px-x0p5 items-center ">
-			{# <StarRating
+<section class="relative flex items-end overflow-hidden text-center min-h-80vh md:items-center md:max-h-75vh">
+    <div class="w-full z-10 relative content pb-x2 md:w-10/12 md:flex md:flex-col md:justify-center mx-auto md:my-x3 px-x1p5 mobile-bg">
+        <div class="reviews">
+            <a href="#reviews" class="w-auto inline-flex text-white mt-x2 mb-x1 md:my-x0p25 md:order-1 border boder-white border-x0p1 rounded-full hover:bg-black-x0p2 py-x0p5 px-x0p75 md:py-x0p25 md:px-x0p5 items-center ">
+                {# <StarRating
 			rating={reviewData.averageRating} stylestarwidth="40" {style}/> #}
-			<!-- <p class="text-x2 md:text-x0p5 transition duration-500 ease-in-out "> -->
-			{% include "components/star-rating-complex.njk" %}
-			<p class="text-x2 md:text-x0p25 mt-x0p1">
-				&nbsp; von {{ reviews | length }} Bewertungen
-			</p>
-		</a>
-	</div>
-	<!-- <div class="content z-20 md:flex md:flex-wrap md:items-start "> -->
-	<h1 class="text-white text-x5 md:text-x3 mb-x1 leading-tighter font-medium block md:mb-x1 ">
-		Instrumentenversicherung
-		<br/>
-		– auch für Equipment
-	</h1>
+                <!-- <p class="text-x2 md:text-x0p5 transition duration-500 ease-in-out "> -->
+                {% include "components/star-rating-complex.njk" %}
+                <p class="text-x2 md:text-x0p25 mt-x0p1">
+                    &nbsp; von
+                    {{ reviews | length }}
+                    Bewertungen
+                </p>
+            </a>
+        </div>
+        <!-- <div class="content z-20 md:flex md:flex-wrap md:items-start "> -->
+        <h1 class="text-white text-x5 md:text-x3 mb-x2 leading-snug md:leading-tighter font-medium block md:mb-x1 ">
+            Instrumentenversicherung
+            <br/>
+            – auch für Equipment
+        </h1>
 
-	<a href="/anfrage" class="inline-block text-white hover:underline text-x2 md:text-x0p25 bg-secondary p-x1 md:py-x0p25 md:px-x0p5 mb-x2 md:mb-0 md:inline-flex hover:bg-secondary-dark mx-auto" title="Angebot anfragen">
-		Jetzt anfragen
-	</a>
+        <a href="/anfrage" class="inline-block text-white hover:underline text-x2 md:text-x0p25 bg-secondary p-x1 md:py-x0p25 md:px-x0p5 mb-x2 md:mb-0 md:inline-flex hover:bg-secondary-dark mx-auto" title="Angebot anfragen">
+            Jetzt anfragen
+        </a>
 
-</div>
+    </div>
 
-<div class="absolute images top-0 z-0 md:h-60vw w-full overflow-hidden h-full md:px-x1p5">
-	<div class="relative bg-primary h-full w-full">
-		{# <div
+    <div class="absolute images top-0 z-0 md:h-60vw w-full overflow-hidden h-full md:px-x1p5">
+        <div class="relative bg-primary h-full w-full">
+            {# <div
 			class="bg-primary md:h-60vw w-full"> #}
-			<img src="/images/piano_y1wv8n/piano_y1wv8n_c_scale,w_2160.jpg" class="object-cover h-full"/>
-		{# </div> #}
-	</div>
-</div></section>
+            <img src="/images/piano_y1wv8n/piano_y1wv8n_c_scale,w_2160.jpg" class="object-cover h-full"/>
+            {# </div> #}
+        </div>
+    </div>
+</section>
