gave alt tag, removed duplicate id

--- a/site/includes/components/home/1-hero.njk
+++ b/site/includes/components/home/1-hero.njk
@@ -30,7 +30,7 @@
         <div class="relative bg-primary h-full w-full">
             {# <div
 			class="bg-primary md:h-60vw w-full"> #}
-            <img src="/images/piano_y1wv8n/piano_y1wv8n_c_scale,w_2160.jpg" class="object-cover h-full"/>
+            <img src="/images/piano_y1wv8n/piano_y1wv8n_c_scale,w_2160.jpg" class="object-cover h-full" alt="E-piano mit Händen auf den Tasten"/>
             {# </div> #}
         </div>
     </div>
