--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -78,7 +78,7 @@
         {# include
     header #}
         {% include "components/header.njk" %}
-        <div class="" id="main">
+        <div>
             {# include content #}
             {{ content | safe }}
 
