--- a/site/includes/components/home/1-hero.njk
+++ b/site/includes/components/home/1-hero.njk
@@ -1,4 +1,4 @@
-<section class="relative flex items-end overflow-hidden text-center min-h-80vh md:items-center md:max-h-75vh">
+<section class="relative flex items-end overflow-hidden text-center min-h-80vh md:min-h-0 md:items-center md:max-h-75vh">
     <div class="w-full z-10 relative content pb-x2 md:w-10/12 md:flex md:flex-col md:justify-center mx-auto md:my-x3 px-x1p5 mobile-bg">
         <div class="reviews">
             <a href="#reviews" class="w-auto inline-flex text-white mt-x2 mb-x1 md:my-x0p25 md:order-1 border boder-white border-x0p1 rounded-full hover:bg-black-x0p2 py-x0p5 px-x0p75 md:py-x0p25 md:px-x0p5 items-center ">
