--- a/site/includes/components/home/6-no-deductable.njk
+++ b/site/includes/components/home/6-no-deductable.njk
@@ -1,4 +1,4 @@
-<section class=" md:p-x1p5 md:pb-x3 md:pt-x2 md:pb-0 w-100 text-light md:flex relative items-center">
+<section class=" text-light relative md:flex  items-center md:p-x1p5 md:py-x1 md:pb-0 w-100">
 	<div
 		class="hidden md:inline-block order-2">
 		<img src="/images/drums_ulbs6v/drums_ulbs6v_c_scale,w_2160.jpg" alt="Schlagzeuger mit Band im Hintergrund" class="w-full"/>
