--- a/css/main.css
+++ b/css/main.css
@@ -656,7 +656,7 @@ video {
   min-height: 2px;
   background-color: #6b46c1;
   transition: all 0.4s;
-  transform-origin: 47%;
+  transform-origin: 50%;
 }
 
 .mobile-icon:before,
@@ -681,14 +681,18 @@ video {
   width: 100%;
 }
 
-.mobile-icon.active:before,
+.mobile-icon.active:before {
+  top: 50%;
+  transform: rotate(45deg);
+}
+
 .mobile-icon.active:after {
   top: 50%;
   transform: rotate(-45deg);
 }
 
 .mobile-icon.active .middle-line {
-  transform: rotate(45deg);
+  opacity: 0;
 }
 
 @media (max-width: 768px) {
@@ -11913,6 +11917,10 @@ img {
 
 .max-w-screen-xl{
   max-width: 1280px;
+}
+
+.max-w-100vw{
+  max-width: 100vw;
 }
 
 .min-h-0{
@@ -37527,6 +37535,10 @@ img {
 
   .sm\:max-w-screen-xl{
     max-width: 1280px;
+  }
+
+  .sm\:max-w-100vw{
+    max-width: 100vw;
   }
 
   .sm\:min-h-0{
@@ -63144,6 +63156,10 @@ img {
     max-width: 1280px;
   }
 
+  .md\:max-w-100vw{
+    max-width: 100vw;
+  }
+
   .md\:min-h-0{
     min-height: 0;
   }
@@ -88759,6 +88775,10 @@ img {
     max-width: 1280px;
   }
 
+  .lg\:max-w-100vw{
+    max-width: 100vw;
+  }
+
   .lg\:min-h-0{
     min-height: 0;
   }
@@ -114372,6 +114392,10 @@ img {
 
   .xl\:max-w-screen-xl{
     max-width: 1280px;
+  }
+
+  .xl\:max-w-100vw{
+    max-width: 100vw;
   }
 
   .xl\:min-h-0{
