--- a/site/includes/components/header.njk
+++ b/site/includes/components/header.njk
@@ -2,19 +2,19 @@
 	<a href="#main" class="skip-to-main absolute z-0 w-1 h-1 overflow-hidden text-x2 md:text-x1" title="Navigation überspringen">
 		Navigation überspringen
 	</a>
-	<nav class="flex items-center justify-between flex-wrap bg-light py-x1 md:py-0 px-x1p5">
+	<nav class="flex items-center justify-between flex-wrap bg-light py-x1 md:py-0 px-x1p5 ">
 		<div class="relative flex justify-between flex-wrap w-full">
 			<div class="flex justify-between flex-wrap w-full items-center flex-shrink-0 text-white mr-6 ">
-				<a href="/" title="Startseite aufrufen" class="text-x2 text-primary md:text-x0p75 lg:text-x0p25 mt-1 ">
+				<a href="/" title="Startseite aufrufen" class="text-x2 text-primary md:text-x0p75 lg:text-x0p25 mt-1 z-20">
 					<strong>
 						Musikversicherung
 						<span class="opacity-75 -ml-1">.com</span>
 					</strong>
 				</a>
-				<div class="mobile-icon md:hidden w-x1p5 h-x1">
+				<div class="mobile-icon md:hidden w-x1p5 h-x1 z-20">
 					<div class="middle-line"></div>
 				</div>
-				<div class="mobile-menu-container absolute h-screen md:h-auto md:relative overflow-hidden top-0 w-screen block -mx-x1p5 md:mb-0 md:flex md:items-center md:w-auto">
+				<div class="invisible mobile-menu-container absolute h-screen md:h-auto md:relative overflow-hidden top-0 w-screen block -mx-x1p5 md:mb-0 md:flex md:items-center md:w-auto">
 					<div class="mobile-menu flex flex-col content-stretch text-center text-x3 md:text-x0p75 lg:text-x0p25  h-full bg-light px-x1p5 py-x4 md:bg-transparent md:text-left md:flex-grow md:inline-block md:py-x0p5">
 						<a href="/faq" title="FAQs aufrufen" class="flex-1 flex justify-center items-center  md:inline-block  text-primary hover:text-primary md:mr-x0p5 hover:underline">
 							FAQ
