--- a/site/includes/components/header.njk
+++ b/site/includes/components/header.njk
@@ -15,7 +15,7 @@
 					<div class="middle-line"></div>
 				</div>
 				<div class="invisible mobile-menu-container absolute h-screen md:h-auto md:relative overflow-hidden top-0 w-screen block -mx-x1p5 md:mb-0 md:flex md:items-center md:w-auto">
-					<div class="mobile-menu flex flex-col content-stretch text-center text-x3 md:text-x0p75 lg:text-x0p25  h-full bg-light px-x1p5 py-x4 md:bg-transparent md:text-left md:flex-grow md:inline-block md:py-x0p5">
+					<div class="mobile-menu flex flex-col content-stretch text-center text-x3 md:text-x0p75 lg:text-x0p25  h-full bg-light px-x1p5 pt-20 pb-40 md:bg-transparent md:text-left md:flex-grow md:inline-block md:py-x0p5">
 						<a href="/faq" title="FAQs aufrufen" class="flex-1 flex justify-center items-center  md:inline-block  text-primary hover:text-primary md:mr-x0p5 hover:underline">
 							FAQ
 						</a>
