--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -1,8 +1,9 @@
 //==========  Typography ==========//
 
-// headings
-// h1, h2, h3 {
-//     @apply font-bold leading-tight mt-0 mb-6 text-purple-900;
+// headings h1,
+// h2,
+// h3 {
+//   @apply font-bold;
 // }
 
 // .page-title {
