--- a/site/includes/components/home/12-faq-teaser.njk
+++ b/site/includes/components/home/12-faq-teaser.njk
@@ -1,7 +1,7 @@
 {% from "components/youtube.njk" import youtube %}
 
 <section id="ueber-mich" class=" px-x1p5 pb-x3 md:py-x2 w-100 relative items-center">
-    <h1 class="text-primary text-x6 leading-tight mb-x2 border-solid">
+    <h1 class="text-primary text-x4 md:text-center leading-tight mb-x2 border-solid">
       Häufig gestellte Fragen
     </h1>
     <div class="grid md:grid-cols-2 gap-x1">
