--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -45,6 +45,8 @@
         <link rel="mask-icon" href="{{ site.images.favicon }}safari-pinned-tab.svg" color="#6b46c1"/>
         <link rel="shortcut icon" href="{{ site.images.favicon }}favicon.ico"/>
         <meta name="msapplication-TileColor" content="#6B46C1"/>
+        <link rel="manifest" href="/manifest.webmanifest">
+
         {#<meta
             name="msapplication-config"
             content="{{ site.images.favicon }}browserconfig.xml"
