fixed color contrast accessibility

--- a/site/includes/components/header.njk
+++ b/site/includes/components/header.njk
@@ -7,8 +7,8 @@
 			<div class="flex justify-between flex-wrap w-full items-center flex-shrink-0 text-white mr-6 ">
 				<a href="/" title="Startseite aufrufen" class="text-x2 text-primary md:text-x0p75 lg:text-x0p25 mt-1 z-20">
 					<strong>
-						Musikversicherung
-						<span class="opacity-75 -ml-1">.com</span>
+						Musikversicherung.com
+						{# <span class="opacity-75 -ml-1">.com</span> #}
 					</strong>
 				</a>
 				<div class="mobile-icon md:hidden w-x1p5 h-x1 z-20">
