--- a/site/includes/components/footer.njk
+++ b/site/includes/components/footer.njk
@@ -3,14 +3,14 @@
 	<div class="flex flex-col md:flex-row justify-between md:items-center mb-x1
 						    md:mb-x0p5">
 		<div class="flex-1 flex flex-col md:flex-row space-between">
-			<a href="tel:+4951919313199" class="flex-1 hover:underline mb-x0p5 md:mb-0" title="B!-Das Versicherungsbüro anrufen">
+			<a href="tel:+4951919313199" class="flex-1 hover:underline mb-x0p5 md:mb-0 min-h-48 flex items-center" title="B!-Das Versicherungsbüro anrufen">
 				Tel.: +49 5191 931 31 99
 			</a>
-			<a href="tel:+491725113611" class="flex-1 hover:underline mb-x0p5 md:mb-0" title="B!-Das Versicherungsbüro mobile anrufen">
+			<a href="tel:+491725113611" class="flex-1 hover:underline mb-x0p5 md:mb-0 min-h-48 flex items-center" title="B!-Das Versicherungsbüro mobile anrufen">
 				Mobil: +49 172 511 3611
 			</a>
 		</div>
-		<a href="mailto:info@musikversicherung.com" title="E-Mail an info@musikversicherung.com schreiben" class="flex-1 hover:underline">
+		<a href="mailto:info@musikversicherung.com" title="E-Mail an info@musikversicherung.com schreiben" class="flex-1 hover:underline min-h-48 flex items-center">
 			info@musikversicherung.com
 		</a>
 	</div>
@@ -35,25 +35,25 @@
 	</div>
 	<hr class="border-t md:border-t-x0p1 border-primary mb-x1 md:mb-x0p5"/>
 	<div class="md:flex mb-x1 md:mb-x0p5">
-		<nav class="flex-1 mb-x0p5 md:mb-0">
-			<a rel="prefetch" href="/impressum" title="Impressum aufrufen" class="hover:underline">
+		<nav class="flex-1 mb-x0p5 md:mb-0 flex items-center">
+			<a rel="prefetch" href="/impressum" title="Impressum aufrufen" class="hover:underline min-h-48 flex items-center">
 				Impressum
 			</a>
 			&nbsp; · &nbsp;
-			<a rel="prefetch" href="/datenschutz" title="Datenschutz aufrufen" class="hover:underline">
+			<a rel="prefetch" href="/datenschutz" title="Datenschutz aufrufen" class="hover:underline min-h-48 flex items-center">
 				Datenschutz
 			</a>
 			&nbsp; · &nbsp;
-			<a href="/sitemap.xml" title="Sitemap öffnen" class="hover:underline ">
+			<a href="/sitemap.xml" title="Sitemap öffnen" class="hover:underline min-h-48 flex items-center">
 				Sitemap
 			</a>
 		</nav>
-		<div class="flex-1">
-			<a rel="prefetch" href="/versicherungsbedingungen" title="Versicherungsbedingungen aufrufen" class="hover:underline mb-x0p5 md:mb-0">
+		<div class="flex-1 flex items-center mb-x0p5">
+			<a rel="prefetch" href="/versicherungsbedingungen" title="Versicherungsbedingungen aufrufen" class="hover:underline min-h-48 flex items-center">
 				Versicherungsbedingungen
 			</a>
 			&nbsp; · &nbsp;
-			<a href="/Beschwerdeverfahren.pdf" class="hover:underline mb-x0p5 md:mb-0" title="Beschwerden-Seite aufrufen">
+			<a href="/Beschwerdeverfahren.pdf" class="hover:underline min-h-48 flex items-center" title="Beschwerden-Seite aufrufen" target="_blank">
 				Beschwerden
 			</a>
 
