fixed text contrast

--- a/site/includes/components/home/11-video.njk
+++ b/site/includes/components/home/11-video.njk
@@ -11,12 +11,12 @@
 								</video>
 				</div>
 				<div class="md:bg-secondary md:p-x1 md:relative md:z-0 md:flex flex-col md:w-1/2">
-								<h3 class="text-x6 text-primary md:text-light md:text-x1 mb-x1 leading-tight md:mb-x0p5 font-medium whitespace-no-wrap">
+								<h3 class="text-x6 text-primary md:text-white md:text-x1 mb-x1 leading-tight md:mb-x0p5 font-medium whitespace-no-wrap">
 												Wer ist der Typ hinter
 												<br/>
 												musikversicherung.com?
 								</h3>
-								<p class="text-x2 mb-x1 md:text-x0p25 md:mb-0 md:text-light ">
+								<p class="text-x2 mb-x1 md:text-x0p25 md:mb-0  md:text-white">
 												Wenn Du wissen willst, mit wem Du es zu tun hast, schau Dir dieses kleine Video an. Hier erfährst Du, wer ich bin und was mich antreibt. Viel Spaß!
 								</p>
 				</div>
