--- a/site/includes/components/home/10-more-advantages.njk
+++ b/site/includes/components/home/10-more-advantages.njk
@@ -12,11 +12,11 @@
 		</p>
 	</div>
 
-	<div class="flex-1 md:bg-secondary md:p-x1p5 md:w-1/2">
-		<h3 class="text-x6 text-secondary md:text-light md:text-x1 mb-x1 leading-tight md:mb-x0p5 font-medium ">
+	<div class="flex-1 md:bg-secondary md:p-x1p5 md:w-1/2 ">
+		<h3 class="text-x6 text-secondary md:text-x1 mb-x1 md:text-white leading-tight md:mb-x0p5 font-medium ">
 			Schnelle Abwicklung
 		</h3>
-		<p>
+		<p class="md:text-white">
 			Nach Erhalt Deiner Online-Anfrage bekommst Du in der Regel noch am selben, spätestens am nächsten Arbeitstag Dein individuelles Angebot zur Instrumentenversicherung. Wenn Du das Angebot annehmen möchtest, reicht ein kurzer Hinweis per Email. Wenn nichts weiter zu klären ist, erhältst Du dann umgehend eine Bestätigung über sofortigen Versicherungsschutz. Der dazugehörige Versicherungsvertrag folgt binnen weniger Tage per Post.
 		</p>
 
