--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -92,7 +92,7 @@
             if (navigator && navigator.serviceWorker) {
                 navigator
                     .serviceWorker
-                    .register('sw.js');
+                    .register('/sw.js');
             }
         </script>
     </body>
