--- a/site/includes/components/footer.njk
+++ b/site/includes/components/footer.njk
@@ -48,7 +48,7 @@
 				Sitemap
 			</a>
 		</nav>
-		<div class="flex-1 flex items-center mb-x0p5">
+		<div class="flex-1 flex items-center mb-x0p5 md:mb-0">
 			<a rel="prefetch" href="/versicherungsbedingungen" title="Versicherungsbedingungen aufrufen" class="hover:underline min-h-48 flex items-center">
 				Versicherungsbedingungen
 			</a>
